[package]
name = "pkgman"
version = "0.1.0"
authors = ["rficu <rficu@airmail.cc>"]
edition = "2018"

[lib]
name = "common"
path = "src/common.rs"

[[bin]]
name = "pkgman"
path = "src/bin/pkgman.rs"

[[bin]]
name = "pkgmain"
path = "src/bin/pkgmain.rs"

[dependencies]
config          = "0.10"
clap            = "2.33"
toml            = "0.4.2"
serde           = { version = "1.0", features = ["derive"] }
tokio           = { version = "0.2.*", features = ["full"] }
futures         = "0.3"
ipfs-api        = { version = "0.11.0", features = ["with-actix"], default-features = false }
actix-rt        = "1"
version-compare = "0.0.11"
sha2            = "0.9.3"
base64          = "0.13.0"
ring            = "0.16.20"
untrusted       = "0.7.1"
